# python_pants_example

./: .gitignore  README.md
projects/demoproject/: README.md  pyproject.toml  script.py
projects/demoproject/demoproject/: main.py
