[tool.poetry]
name = "demoproject"
version = "0.1.0"
description = "My demo project"
authors = ["Dejan Đuričić <djuricic1122@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
starlette = "^0.31.0"
uvicorn = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "script:start"